add description
add description about what has been refactor